--- a/src/app/main/bubble-chart/scatter/scatter.component.html
+++ b/src/app/main/bubble-chart/scatter/scatter.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top" layout-margin>
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="BUBBLE_CHART.SCATTER_BASIC" comp-desc="BUBBLE_CHART.SCATTER_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
       x-data-type="time" chart-height="600"></o-chart>
